fixed funky pre-animation of the off_canvas menu and prevented the menu-items from overlapping with the close button.

--- a/css/global_style.css
+++ b/css/global_style.css
@@ -387,8 +387,11 @@ body {
   transition: 0.5s;
 }
 
-.sidenav {
-  padding-top: 50%;
+#off_canvas .sidenav {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #off_canvas a {
